gcc/testsuite/gdc.test/runnable/imports/a17a.d
module imports.a17a;

private import a17;

class foo2x : barx {
    int x;
}
