gcc/testsuite/gdc.test/fail_compilation/imports/imp21353.d
module imports.imp21353;

struct A { int x; }

struct B { import imports.imp21353 : A; }

private struct P { }
